kuber/prod/infrastructure/ingress/app.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: communication
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mapclient
            port:
              number: 80
